# Tray2FA

./: .gitignore  Cargo.toml  index.html  tailwind.css
.github/: dependabot.yml
locales/: en-GB.yml  zh-CN.yml
src/: app.rs  i18n.rs  main.rs  route.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
